Mantis ChangeLog

2004.xx.xx  -  0.18.2

 * Enh #0000: 'Assign to Reporter' button added to 'View Bug' screen. 
 * Fix #3077: Inconsistency: "Assigned To" versus "Handler".
 * Fix #3118: My Account: after update of password, wrong information is given.
 * Fix #3440: "Allowed File Types" is case sensitive (also applies to disallowed file types).
 * Fix #3522: /news_update.php looks different from /main_page.php.
 * Fix #3537: Rewriting custom values with 0 when updating a bug.
 * Fix #3539: Simple view page shows advanced custom fields.
 * Fix #3541: link to documentation wrong.
 * Mantis website moved to http://www.mantisbt.org

2004.02.06  -  0.18.1

 * Fix #2668: Proxy incorrectly presents cached output to other users.
 * Enh #2811: Anonymous mode issues (auto login for anonymous users + other issues).
 * Fix #3028: Mailer produces errors if there are no recipients, and use_bcc is set to ON.
 * Fix #3069: Proxy server incorrectly caches output of 'View All Bugs'
 * Sec #3137: By default, every installation has an admin account with a known login cookie value. This value is now generated at installation time.
 * Fix #3177: Switching project in advanced summary changes current page.
 * Fix #3210: bug_view_advanced_page.php (and simple) doesn't show the project name.
 * Fix #3324: Win32: Call to undefined function: getmxrr() [default to OFF].
 * Fix #3396: Database upgrade scripts that tried to add a unique key failed if duplicate entries existed.
 * Fix #3400: Reopen a 'closed' bug, the value of 'resolution' is 'reopen' and can't be changed (now resolution / duplicate id can be edited)
 * Sec #3445: User see all information from all projects (if user has access to 0 projects)
 * Fix #3449: Database upgrade script fails to detect some existing columns.
 * Fix #3450: Certain database upgrade scripts fail if table already exists.
 * Fix #3467: Delete user ends up at user not found error.
 * Fix #3475: Reopen bug to custom status possibility.